.antlr/ConvCCC20201Parser.java
// Generated from /home/gustavo/ufsc/scanner/ConvCCC20201.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConvCCC20201Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LESS=1, GREATER=2, LESSEQUAL=3, GREATEREQUAL=4, EQUALCOMP=5, DIFFERENT=6, 
		PLUS=7, MINUS=8, MULTIPLY=9, DIVIDE=10, MODULE=11, EQUAL=12, SEMICOLON=13, 
		COMMA=14, OPENPAR=15, CLOSEPAR=16, OPENBRACE=17, CLOSEBRACE=18, OPENBRACKET=19, 
		CLOSEBRACKET=20, DEF=21, NEW=22, IF=23, ELSE=24, FOR=25, RETURN=26, BREAK=27, 
		PRINT=28, READ=29, INT=30, FLOAT=31, STRING=32, NULL=33, IDENT=34, INT_CONSTANT=35, 
		STRING_CONSTANT=36, FLOAT_CONSTANT=37, WS=38;
	public static final int
		RULE_program = 0, RULE_funclist = 1, RULE_funclist1 = 2, RULE_funcdef = 3, 
		RULE_paramlist = 4, RULE_paramlist1 = 5, RULE_statement = 6, RULE_breakstat = 7, 
		RULE_openclosestat = 8, RULE_vardecl = 9, RULE_bracket = 10, RULE_vartype = 11, 
		RULE_atribstat = 12, RULE_atribstat1 = 13, RULE_paramlistcall = 14, RULE_paramlistcall1 = 15, 
		RULE_printstat = 16, RULE_readstat = 17, RULE_returnstat = 18, RULE_ifstat = 19, 
		RULE_elsestat = 20, RULE_forstat = 21, RULE_statelist = 22, RULE_statelist1 = 23, 
		RULE_allocexpression = 24, RULE_numexpbracket = 25, RULE_expression = 26, 
		RULE_expression1 = 27, RULE_comparator = 28, RULE_numexpression = 29, 
		RULE_numexpression1 = 30, RULE_term = 31, RULE_term1 = 32, RULE_minorarith = 33, 
		RULE_priorarith = 34, RULE_unaryexpr = 35, RULE_factor = 36, RULE_factor1 = 37, 
		RULE_lvalue = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funclist", "funclist1", "funcdef", "paramlist", "paramlist1", 
			"statement", "breakstat", "openclosestat", "vardecl", "bracket", "vartype", 
			"atribstat", "atribstat1", "paramlistcall", "paramlistcall1", "printstat", 
			"readstat", "returnstat", "ifstat", "elsestat", "forstat", "statelist", 
			"statelist1", "allocexpression", "numexpbracket", "expression", "expression1", 
			"comparator", "numexpression", "numexpression1", "term", "term1", "minorarith", 
			"priorarith", "unaryexpr", "factor", "factor1", "lvalue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'='", "';'", "','", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "'def'", "'new'", "'if'", "'else'", "'for'", "'return'", "'break'", 
			"'print'", "'read'", "'int'", "'float'", "'string'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LESS", "GREATER", "LESSEQUAL", "GREATEREQUAL", "EQUALCOMP", "DIFFERENT", 
			"PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULE", "EQUAL", "SEMICOLON", 
			"COMMA", "OPENPAR", "CLOSEPAR", "OPENBRACE", "CLOSEBRACE", "OPENBRACKET", 
			"CLOSEBRACKET", "DEF", "NEW", "IF", "ELSE", "FOR", "RETURN", "BREAK", 
			"PRINT", "READ", "INT", "FLOAT", "STRING", "NULL", "IDENT", "INT_CONSTANT", 
			"STRING_CONSTANT", "FLOAT_CONSTANT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ConvCCC20201.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ConvCCC20201Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SEMICOLON:
			case OPENBRACE:
			case IF:
			case FOR:
			case RETURN:
			case BREAK:
			case PRINT:
			case READ:
			case INT:
			case FLOAT:
			case STRING:
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				statement();
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				funclist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunclistContext extends ParserRuleContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public Funclist1Context funclist1() {
			return getRuleContext(Funclist1Context.class,0);
		}
		public FunclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist; }
	}

	public final FunclistContext funclist() throws RecognitionException {
		FunclistContext _localctx = new FunclistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funclist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			funcdef();
			setState(84);
			funclist1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Funclist1Context extends ParserRuleContext {
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public Funclist1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist1; }
	}

	public final Funclist1Context funclist1() throws RecognitionException {
		Funclist1Context _localctx = new Funclist1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_funclist1);
		try {
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				funclist();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ConvCCC20201Parser.DEF, 0); }
		public TerminalNode IDENT() { return getToken(ConvCCC20201Parser.IDENT, 0); }
		public TerminalNode OPENPAR() { return getToken(ConvCCC20201Parser.OPENPAR, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode CLOSEPAR() { return getToken(ConvCCC20201Parser.CLOSEPAR, 0); }
		public TerminalNode OPENBRACE() { return getToken(ConvCCC20201Parser.OPENBRACE, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode CLOSEBRACE() { return getToken(ConvCCC20201Parser.CLOSEBRACE, 0); }
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(DEF);
			setState(91);
			match(IDENT);
			setState(92);
			match(OPENPAR);
			setState(93);
			paramlist();
			setState(94);
			match(CLOSEPAR);
			setState(95);
			match(OPENBRACE);
			setState(96);
			statelist();
			setState(97);
			match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(ConvCCC20201Parser.IDENT, 0); }
		public Paramlist1Context paramlist1() {
			return getRuleContext(Paramlist1Context.class,0);
		}
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paramlist);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				vartype();
				setState(100);
				match(IDENT);
				setState(101);
				paramlist1();
				}
				break;
			case CLOSEPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paramlist1Context extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(ConvCCC20201Parser.COMMA, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public Paramlist1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist1; }
	}

	public final Paramlist1Context paramlist1() throws RecognitionException {
		Paramlist1Context _localctx = new Paramlist1Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramlist1);
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				match(COMMA);
				setState(107);
				paramlist();
				}
				break;
			case CLOSEPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ConvCCC20201Parser.SEMICOLON, 0); }
		public AtribstatContext atribstat() {
			return getRuleContext(AtribstatContext.class,0);
		}
		public PrintstatContext printstat() {
			return getRuleContext(PrintstatContext.class,0);
		}
		public ReadstatContext readstat() {
			return getRuleContext(ReadstatContext.class,0);
		}
		public ReturnstatContext returnstat() {
			return getRuleContext(ReturnstatContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public ForstatContext forstat() {
			return getRuleContext(ForstatContext.class,0);
		}
		public OpenclosestatContext openclosestat() {
			return getRuleContext(OpenclosestatContext.class,0);
		}
		public BreakstatContext breakstat() {
			return getRuleContext(BreakstatContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case FLOAT:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				vardecl();
				setState(112);
				match(SEMICOLON);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				atribstat();
				setState(115);
				match(SEMICOLON);
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				printstat();
				setState(118);
				match(SEMICOLON);
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				readstat();
				setState(121);
				match(SEMICOLON);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				returnstat();
				setState(124);
				match(SEMICOLON);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 6);
				{
				setState(126);
				ifstat();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 7);
				{
				setState(127);
				forstat();
				}
				break;
			case OPENBRACE:
				enterOuterAlt(_localctx, 8);
				{
				setState(128);
				openclosestat();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 9);
				{
				setState(129);
				breakstat();
				}
				break;
			case SEMICOLON:
				enterOuterAlt(_localctx, 10);
				{
				setState(130);
				match(SEMICOLON);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BreakstatContext extends ParserRuleContext {
		public TerminalNode BREAK() { return getToken(ConvCCC20201Parser.BREAK, 0); }
		public TerminalNode SEMICOLON() { return getToken(ConvCCC20201Parser.SEMICOLON, 0); }
		public BreakstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_breakstat; }
	}

	public final BreakstatContext breakstat() throws RecognitionException {
		BreakstatContext _localctx = new BreakstatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_breakstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(BREAK);
			setState(134);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpenclosestatContext extends ParserRuleContext {
		public TerminalNode OPENBRACE() { return getToken(ConvCCC20201Parser.OPENBRACE, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode CLOSEBRACE() { return getToken(ConvCCC20201Parser.CLOSEBRACE, 0); }
		public OpenclosestatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_openclosestat; }
	}

	public final OpenclosestatContext openclosestat() throws RecognitionException {
		OpenclosestatContext _localctx = new OpenclosestatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_openclosestat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(OPENBRACE);
			setState(137);
			statelist();
			setState(138);
			match(CLOSEBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public VartypeContext vartype() {
			return getRuleContext(VartypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(ConvCCC20201Parser.IDENT, 0); }
		public BracketContext bracket() {
			return getRuleContext(BracketContext.class,0);
		}
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_vardecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			vartype();
			setState(141);
			match(IDENT);
			setState(142);
			bracket();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BracketContext extends ParserRuleContext {
		public TerminalNode OPENBRACKET() { return getToken(ConvCCC20201Parser.OPENBRACKET, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(ConvCCC20201Parser.INT_CONSTANT, 0); }
		public TerminalNode CLOSEBRACKET() { return getToken(ConvCCC20201Parser.CLOSEBRACKET, 0); }
		public BracketContext bracket() {
			return getRuleContext(BracketContext.class,0);
		}
		public BracketContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bracket; }
	}

	public final BracketContext bracket() throws RecognitionException {
		BracketContext _localctx = new BracketContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_bracket);
		try {
			setState(149);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPENBRACKET:
				enterOuterAlt(_localctx, 1);
				{
				setState(144);
				match(OPENBRACKET);
				setState(145);
				match(INT_CONSTANT);
				setState(146);
				match(CLOSEBRACKET);
				setState(147);
				bracket();
				}
				break;
			case SEMICOLON:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VartypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(ConvCCC20201Parser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(ConvCCC20201Parser.FLOAT, 0); }
		public TerminalNode STRING() { return getToken(ConvCCC20201Parser.STRING, 0); }
		public VartypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vartype; }
	}

	public final VartypeContext vartype() throws RecognitionException {
		VartypeContext _localctx = new VartypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_vartype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << STRING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribstatContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(ConvCCC20201Parser.EQUAL, 0); }
		public Atribstat1Context atribstat1() {
			return getRuleContext(Atribstat1Context.class,0);
		}
		public AtribstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat; }
	}

	public final AtribstatContext atribstat() throws RecognitionException {
		AtribstatContext _localctx = new AtribstatContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_atribstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			lvalue();
			setState(154);
			match(EQUAL);
			setState(155);
			atribstat1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atribstat1Context extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AllocexpressionContext allocexpression() {
			return getRuleContext(AllocexpressionContext.class,0);
		}
		public Atribstat1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat1; }
	}

	public final Atribstat1Context atribstat1() throws RecognitionException {
		Atribstat1Context _localctx = new Atribstat1Context(_ctx, getState());
		enterRule(_localctx, 26, RULE_atribstat1);
		try {
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PLUS:
			case MINUS:
			case OPENPAR:
			case NULL:
			case IDENT:
			case INT_CONSTANT:
			case STRING_CONSTANT:
			case FLOAT_CONSTANT:
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				expression();
				}
				break;
			case NEW:
				enterOuterAlt(_localctx, 2);
				{
				setState(158);
				allocexpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistcallContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ConvCCC20201Parser.IDENT, 0); }
		public Paramlistcall1Context paramlistcall1() {
			return getRuleContext(Paramlistcall1Context.class,0);
		}
		public ParamlistcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlistcall; }
	}

	public final ParamlistcallContext paramlistcall() throws RecognitionException {
		ParamlistcallContext _localctx = new ParamlistcallContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_paramlistcall);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(161);
				match(IDENT);
				setState(162);
				paramlistcall1();
				}
				break;
			case CLOSEPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paramlistcall1Context extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(ConvCCC20201Parser.COMMA, 0); }
		public ParamlistcallContext paramlistcall() {
			return getRuleContext(ParamlistcallContext.class,0);
		}
		public Paramlistcall1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlistcall1; }
	}

	public final Paramlistcall1Context paramlistcall1() throws RecognitionException {
		Paramlistcall1Context _localctx = new Paramlistcall1Context(_ctx, getState());
		enterRule(_localctx, 30, RULE_paramlistcall1);
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(166);
				match(COMMA);
				setState(167);
				paramlistcall();
				}
				break;
			case CLOSEPAR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintstatContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(ConvCCC20201Parser.PRINT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printstat; }
	}

	public final PrintstatContext printstat() throws RecognitionException {
		PrintstatContext _localctx = new PrintstatContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_printstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(PRINT);
			setState(172);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadstatContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(ConvCCC20201Parser.READ, 0); }
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public ReadstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_readstat; }
	}

	public final ReadstatContext readstat() throws RecognitionException {
		ReadstatContext _localctx = new ReadstatContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_readstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(READ);
			setState(175);
			lvalue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnstatContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(ConvCCC20201Parser.RETURN, 0); }
		public ReturnstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnstat; }
	}

	public final ReturnstatContext returnstat() throws RecognitionException {
		ReturnstatContext _localctx = new ReturnstatContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_returnstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			match(RETURN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
